Fix alignment issues and add dot button to drawing pen
The grid did not align properly as the reset button was not fully clearing
all previous data. I have now set it to fully clear all previous information
when you click the reset button.

Secondly I have added a dot function, so the pen can draw in squares and
also in circles. I saw the idea on another person page (apologies I can't
find it now, but great idea!) And worked out how to do it using border radius.

--- a/sketch.css
+++ b/sketch.css
@@ -1,21 +1,40 @@
+.wrapper {
+	width: 100%;
+	height: 100%;
+}
+
+.title {
+	display: block;
+	margin: 0px auto;
+	width: 460px;
+	height: 150px;
+}
 #container {
-   height: 850px;
-   width: 850px;
+   height: 370px;
+   width: 370px;
    display: block;
+   margin: 0px auto;
 }
 
 .row {
 	width: auto;
 	display: block;
-	width: 841px;
+	width: 360px;
+	background-color: blue;
 }
 
 .square {
-	background-color: blue;
 	display: inline-block;
-	outline: black 1px solid;
 }
 
-#covered {
+.circle {
+	border-radius: 50%;
+}
+
+.blue {
+	background-color: blue;
+}
+
+.red {
 	background-color: red;
 }
